[tool.poetry]
name = "mozart_api"
version = "3.4.1.8.2"
description = "Mozart platform API"
authors = [
    "BangOlufsen <support@bang-olufsen.dk>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bang-olufsen/mozart-open-api"
keywords = [
    "OpenAPI",
    "OpenAPI-Generator",
    "Mozart platform API",
]
include = [
    "mozart_api/py.typed",
]
homepage = "https://pypi.org/project/mozart-api/"
documentation = "https://bang-olufsen.github.io/mozart-open-api/"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia",
    "Intended Audience :: Developers",
]
exclude = [
    "test",
]

[tool.poetry.dependencies]
urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">=3.8.3"
aiohttp-retry = ">= 2.8.3"
pydantic = ">=2"
typing-extensions = ">=4.7.1"
aioconsole = ">=0.4.1"
inflection = ">=0.5.1"
zeroconf = ">=0.25.1"
websockets = ">=12.0"
python = ">=3.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"
types-python-dateutil = ">=2.8.19.14"
mypy = "1.4.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bang-olufsen/mozart-open-api/issues"

[tool.poetry.scripts]
mozart_api = "mozart_api.mozart_cli:MozartApiCli"

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
    "mozart_api",
    "tests",
]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
